--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :author %>
+    <%= form.text_field :author, id: :post_author %>
+  </div>
+
+  <div class="field">
     <%= form.label :body %>
     <%= form.text_area :body, id: :post_body %>
   </div>
